# r4dio

./: -  .gitignore  AGENTS.md  Cargo.toml  HISTORY.md  HOMEBRIDGE.md  LICENSE  PROJECT.md  README.md  architecture.md  build-windows.sh  config.toml  radios.m3u  scope-tui-integration.md  songs.vds.template  starred.toml  stations.toml  windows-build.md
.github/workflows/: build-all-platforms.yml  build-windows-with-vibra.yml  build-windows.yml
crates/radio-daemon/: Cargo.toml
crates/radio-daemon/src/: core.rs  http.rs  main.rs  mpv.rs  proxy.rs  socket.rs
crates/radio-proto/: Cargo.toml
crates/radio-proto/src/: config.rs  lib.rs  platform.rs  protocol.rs  songs.rs  state.rs
crates/radio-proto/tests/: nts_mixtape_scan_all.rs  nts_mixtape_single.rs  station_poll_non_nts.rs
crates/radio-proto/tests/common/: mod.rs  nts_mixtape.rs
crates/radio-tui/: Cargo.toml
crates/radio-tui/src/: action.rs  app.rs  app_state.rs  component.rs  connection.rs  core.rs  download_manager.rs  focus.rs  http.rs  intent.rs  latency.rs  main.rs  mpv.rs  pipewire_viz.rs  proxy.rs  theme.rs  workspace.rs
crates/radio-tui/src/components/: file_list.rs  file_meta.rs  header.rs  help_overlay.rs  icy_ticker.rs  log_panel.rs  mod.rs  nts_panel.rs  scope_panel.rs  songs_ticker.rs  station_list.rs  vu_meter.rs
crates/radio-tui/src/nts_download/: api.rs  download.rs  metadata.rs  mod.rs  parser.rs  tests.rs
crates/radio-tui/src/scope/: mod.rs  oscilloscope.rs
crates/radio-tui/src/widgets/: filter_input.rs  mod.rs  pane_chrome.rs  progress_bar.rs  scrollable_list.rs  status_bar.rs  toast.rs
crates/radio-tui/tests/: latency_integration.rs  real_station_latency.rs
crates/sound-viz-lab/: Cargo.toml
crates/sound-viz-lab/src/: ascii_core.rs  input.rs  main.rs  signals.rs  visuals.rs
devdocs/: ascii-rendering.md  ascii-visuals.md
devdocs/old/: v1-iteration.md  v1_plan.md
homebridge/: README.md  config.json  pactl-http.py  radio-control.sh  radio_cmd4.sh
src/daemon/: http.rs  main.rs  mpv.rs  socket.rs
src/shared/: config.rs  platform.rs  protocol.rs  songs.rs  state.rs
src/tui/: connection.rs  main.rs  ui.rs
tests/: nts_mixtape_scan_all_test.sh  nts_mixtape_show_test.sh
