[workspace]
members = ["crates/radio-proto", "crates/radio-daemon", "crates/radio-tui"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "process", "time", "io-std", "sync", "net", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config / files
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# TUI
ratatui = "0.30"
crossterm = "0.28"
tui-input = "0.15"

# Unicode text width
unicode-width = "0.2"

# Clipboard
arboard = { version = "3", default-features = false }

# Workspace crates
radio-proto = { path = "crates/radio-proto" }

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
