[package]
name = "radio-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "radio-daemon"
path = "src/main.rs"

[dependencies]
radio-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(windows)'.dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "process", "time", "io-std", "sync", "net", "fs", "windows-sys"] }
